Bug 1594132 - Move background-color rules so they do not appear under appearance rules, enabling sidebar vibrancy. r=ntim,dao
`appearance` CSS rules allow elements to take on system appearance. For UI elements that we want to take on system styling, we set `appearance: auto` combined with platform-specific rules like `-moz-default-appearance: -moz-mac-vibrant-titlebar-light;`

macOS sidebar vibrancy broke because a background-color was being applied to `root`. That colour appeared under elements with `appearance: auto` set, so we wouldn't see the platform-specific styling. This patch moves the root background-color to `#navigator-toolbox`, so that it does not appear under `#sidebar-box`.

We still want a background colour applied to sidebars when a lwtheme includes one. We only want `appearance: auto` applied to sidebars when the active theme does not have sidebar styling rules. That's why `#sidebar-box:not(:-moz-lwtheme)` is changed to `#sidebar-box:not([lwt-sidebar])`.

This patch also removes the rule
```
:root:-moz-lwtheme {
  appearance: none;
}
```
from osx/global/global.css. There's no corresponding addition of a `#navigator-toolbox { appearance:none; }` rule because that rule already exists in [osx/browser.css](https://searchfox.org/mozilla-central/rev/7067bbd8194f4346ec59d77c33cd88f06763e090/browser/themes/osx/browser.css#45).

Differential Revision: https://phabricator.services.mozilla.com/D104416

UltraBlame original commit: e5ee2e40acc0271d1e6032ab7e6058469cd7eef9

--- a/toolkit/themes/osx/global/global.css
+++ b/toolkit/themes/osx/global/global.css
@@ -5,7 +5,7 @@
 %include ../../shared/global.inc.css
 
 :root {
-  
+  /* ::::: Variables ::::: */
   --arrowpanel-padding: 16px;
   --default-arrowpanel-background: #fff;
   --default-arrowpanel-color: hsl(0,0%,10%);
@@ -18,7 +18,7 @@
   --panel-description-color: hsl(0,0%,50%);
 
   --focus-ring-box-shadow: 0 0 0 1px -moz-mac-focusring inset, 0 0 0 1px -moz-mac-focusring;
-  
+  /* ::::: Styles ::::: */
   appearance: auto;
   -moz-default-appearance: dialog;
   background-color: #FFFFFF;
@@ -26,7 +26,7 @@
   font: message-box;
 }
 
-
+/* ::::: Alert icons :::::*/
 
 .message-icon,
 .alert-icon,
@@ -55,7 +55,7 @@
   list-style-image: url("chrome://global/skin/icons/question-64.png");
 }
 
-
+/* ::::: iframe ::::: */
 
 xul|iframe {
   border: none;
@@ -66,18 +66,14 @@ xul|iframe {
 }
 
 @supports -moz-bool-pref("layout.css.emulate-moz-box-with-flex") {
-  
+  /* In emulation, <iframe> is block instead of inline, so reset the width/height */
   xul|iframe {
     width: auto;
     height: auto;
   }
 }
 
-
-
-:root:-moz-lwtheme {
-  appearance: none;
-}
+/* ::::: Miscellaneous formatting ::::: */
 
 :root[lwtheme-image]:-moz-lwtheme-darktext {
   text-shadow: 0 -0.5px 1.5px white;
